--- a/frontend/src/components/layout/Layout.module.css
+++ b/frontend/src/components/layout/Layout.module.css
@@ -1,7 +1,7 @@
 .header {
   align-items: center;
   display: flex;
-  justify-content: start;
+  justify-content: space-between;
   min-height: 100px;
   width: 100%;
 }
@@ -18,4 +18,18 @@
   position: fixed;
   text-align: center;
   width: 100%;
+}
+
+.button {
+  background-color: #E4003A;
+  border: none;
+  border-radius: 12px;
+  color: white;
+  padding: 15px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 40px;
+  cursor: pointer;
 }
